cmake_minimum_required(VERSION 3.15)

project(e2fsprogs_build LANGUAGES C CXX)

set(CMAKE_C_STANDARD 23)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_CXX_EXTENSIONS ON)

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    message("use Clang build")
    # use lld
    add_link_options("-fuse-ld=lld")

    # Android libs requried libc++ c++abi
    find_library(libcxx NAMES "libc++.a" "libc++.so" "libc++.dll" "libc++.lib")
    find_library(libcxxabi NAMES "libc++abi.a" "libc++abi.so" "libc++abi.dll" "libc++abi.lib")
    find_library(libstdcxx NAMES "libstdc++.a" "libstdc++.so" "libstdc++.dll" "libstdc++.lib")
    if(NOT CMAKE_SYSTEM_NAME STREQUAL "Linux")
        if(libcxx)
            message("found libc++")
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --stdlib=libc++")
            link_libraries(c++)
        endif()
        if(libcxxabi)
            message("found libc++abi")
            link_libraries(c++abi)
        endif()
        if(libstdcxx AND NOT libcxx)
            message("found libstdc++ not found libc++")
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --stdlib=libstdc++")
            link_libraries(stdc++)
        endif()
        if(NOT libstdcxx AND NOT libcxx)
            message("libstdc++ libc++ not found")
            message("This is use pure windows environment Always link libc++")
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --stdlib=libc++")
            link_libraries(c++)
        endif()
    endif()
else()
    message("use GCC build")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --stdlib=libstdc++")
    link_libraries(stdc++)
endif()

# Headers
include("${CMAKE_SOURCE_DIR}/cmake/include.cmake")

# e2fs_defaults
include("${CMAKE_SOURCE_DIR}/cmake/e2fsprogs.cmake")

# e2fs_libs
include("${CMAKE_SOURCE_DIR}/cmake/libext2_com_err.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libext2fs.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libext2_misc.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libext2_blkid.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libext2_uuid.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libext2_e2p.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libext2_ss.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libext2_support.cmake")

# Libraries
include("${CMAKE_SOURCE_DIR}/cmake/fmtlib.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/zlib.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/liblog.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libbase.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libcutils.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libcrypto.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libsparse.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/pcre.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libsepol.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/libselinux.cmake")
if(WIN32)
    include("${CMAKE_SOURCE_DIR}/cmake/mman-win32.cmake")
endif()

option(PREFER_STATIC_LINKING "Link static" OFF)

if(PREFER_STATIC_LINKING)
    set(CMAKE_EXE_LINKER_FLAGS "-static")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        add_compile_options("-Os" "-flto")
        add_link_options("-flto" "-Wl,--gc-sections" "-s")
    endif()
else()
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        add_compile_options("-flto=thin")
        add_link_options("-flto=thin")
    endif()
endif()

# windows io need
if(WIN32)
    add_compile_definitions("_FILE_OFFSET_BITS=64" "_LARGEFILE_SOURCE")
endif()

# Binaries
include("${CMAKE_SOURCE_DIR}/cmake/mke2fs.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/tune2fs.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/e2fsck.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/debugfs.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/resize2fs.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/e2fsdroid.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/extract.cmake")
